--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@saleor/sdk",
+  "name": "@trame-digitali/saleor-sdk",
   "version": "0.1.5",
   "description": "This package contains all queries and mutations that are used in our sample storefront. It can be used for semi-custom or fully-custom (with ability to extend existing queries) storefront solutions.",
   "homepage": "https://getsaleor.com/",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/mirumee/saleor-sdk.git"
+    "url": "git@github.com:trame-digitali/saleor-sdk.git"
   },
   "scripts": {
     "build": "tsc",
